# bevy_game_template

./: .gitignore  :w  Cargo.toml  README.md  TODO.md  clippy_check.sh  runcc.yaml
assets/ldtk/: Typical_2D_platformer_example.ldtk  demo.ldtk
example/: live_spectrum_example.rs
game/: Cargo.toml
game/src/: actions.rs  lib.rs
game/src/levels/: systems.rs
game/src/physics/: mod.rs  physic.rs
game/src/players/: components.rs  player.rs
src/: actions.rs  audio.rs  configs.rs  enemy.rs  events.rs  helpers.rs  lib.rs  loading.rs  main.rs  menu.rs  minds.rs  painter.rs  player.rs  settings.rs  systems.rs
src/actions/: components.rs  game_control.rs  mod.rs  systems.rs
src/animations/: animation.rs  components.rs  mod.rs  systems.rs
src/audio/: components.rs  mod.rs  systems.rs
src/core/: README.md
src/game/: README.md  mod.rs  systems.rs
src/game/animations/: mod.rs  systems.rs
src/game/audio/: components.rs  mod.rs  systems.rs
src/game/ldtk/: mod.rs  systems.rs
src/game/movements/: mod.rs  systems.rs
src/game/particles/: mod.rs  systems.rs
src/game/physics/: components.rs  mod.rs  systems.rs
src/game/players/: components.rs  mod.rs  state_machine.rs  systems.rs
src/ldtk/: mod.rs  systems.rs
src/levels/: components.rs  level.rs  mod.rs  systems.rs
src/loading/: mod.rs
src/main_menu/: mod.rs  styles.rs
src/main_menu/systems/: interactions.rs  layouts.rs
src/menu/: styles.rs  systems.rs
src/movements/: components.rs  mod.rs  systems.rs
src/physics/: components.rs  mod.rs  physic.rs  systems.rs
src/players/: components.rs  mod.rs  player.rs  state_machine.rs  state_machine_old.rs  systems.rs  systems_old.rs  systems_split.rs
src/states/: mod.rs  states.rs
src/states/candle/: mod.rs
src/states/dasher/: mod.rs
src/states/platformer/: mod.rs
src/states/player/: mod.rs
