[package]
name = "bevy_game" # ToDo
version = "0.1.0"
publish = false
authors = ["Niklas Eicker <git@nikl.me>"] # ToDo: you are the author ;)
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = { 
  version = "0.8", 
  default-features = false, 
  features = [
    "bevy_asset", 
    "bevy_winit", 
    "render", 
    "png", 
    "x11"
  ] 
}
bevy_kira_audio = { version = "0.12" }
bevy_asset_loader = { version = "0.12" }
rand = { version = "0.8.3" }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.26.0", default-features = false }
image = { version = "0.24", default-features = false }
benimator = { version = "3.0.0" }
bevy_ecs_ldtk = { version = "0.3.0" }
heron = { version = "3.0", features = ["2d"] }
bevy_prototype_lyon = "0.5.0"
bevy-inspector-egui = "0.11.0"
bevy_polyline = "0.2"
grid = "0.6.0"

[build-dependencies]
embed-resource = "1.4"
