[package]
name = "bevy_game"
version = "0.1.1"
publish = false
authors = ["Marcel Ochs <marc3lox@googlemail.com>"]
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = [
    "bevy/bevy_dylib",
]

# Bevy defaults minus audio and some other not needed things
default = [
    "bevy/animation",
    "bevy/bevy_asset",
    "bevy/bevy_scene",
    "bevy/bevy_winit",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    "bevy/bevy_gltf",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_ui",
    "bevy/png",
    "bevy/hdr",
    "bevy/zstd",
    "bevy/x11",
    "bevy/ktx2",
    "bevy/filesystem_watcher",
    "bevy/tonemapping_luts"
]

[dependencies]
# libs
rand = { version = "^0.8" }
itertools = { version = "^0.10" }
statig = { version = "^0.3" }

# keep the dependency up to date with bevy_winit
winit = { version = "^0.27", default-features = false, features = [ "wayland", "x11" ]}
image = { version = "^0.24", default-features = false }

# Bevy things
bevy = { version = "^0.10", default-features = false }

# Plugins etc.
bevy_kira_audio = { version = "^0.15" }
bevy_asset_loader = { version = "^0.16" }
bevy-inspector-egui = { version = "^0.18" }
benimator = { version = "^4.1" }
bevy_rapier2d = { version = "^0.21" }
bevy_ecs_ldtk = { version = "^0.7" }
bevy_hanabi = { version = "^0.6", default-features = false, features = [ "2d" ] }
leafwing-input-manager = { version = "^0.9" }
seldom_state = { version = "^0.6", features= [ "leafwing_input" ] }

[build-dependencies]
embed-resource = "1.4"
