[package]
name = "game"
version = "0.1.0"
publish = false
authors = ["Marcel Ochs <marc3lox@googlemail.com>"]
edition = "2021"

[features]
default = []
dynamic = ["bevy/dynamic"]

[dependencies]
bevy = { version = "0.8", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11"] }
bevy_kira_audio = { version = "0.12" }
bevy_asset_loader = { version = "0.12" }
rand = { version = "0.8.3" }
winit = { version = "0.26.0", default-features = false }
image = { version = "0.24", default-features = false }
benimator = { version = "4.0.0" }
bevy_rapier2d = { version = "0.17.0" }
bevy_ecs_ldtk = { version = "0.4.0" }
bevy_hanabi = { version = "0.4", default-features = false, features = [ "2d" ] }
bevy-inspector-egui = "0.13.0"

[build-dependencies]
embed-resource = "1.4"
